@@ -18,7 +18,6 @@ package com.echothree.control.user.filter.server.command;
 
 import com.echothree.control.user.filter.common.form.GetFilterKindForm;
 import com.echothree.control.user.filter.common.result.FilterResultFactory;
-import com.echothree.control.user.filter.common.result.GetFilterKindResult;
 import com.echothree.model.control.core.common.EventTypes;
 import com.echothree.model.control.filter.server.control.FilterControl;
 import com.echothree.model.control.filter.server.logic.FilterKindLogic;
@@ -35,8 +34,6 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetFilterKindCommand
@@ -46,20 +43,20 @@ public class GetFilterKindCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.FilterKind.name(), SecurityRoles.Review.name())
-                )))
-        )));
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("FilterKindName", FieldType.ENTITY_NAME, false, null, null),
                 new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
                 new FieldDefinition("Key", FieldType.KEY, false, null, null),
                 new FieldDefinition("Guid", FieldType.GUID, false, null, null),
                 new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
-        ));
+        );
     }
 
     /** Creates a new instance of GetFilterKindCommand */
@@ -69,7 +66,7 @@ public class GetFilterKindCommand
 
     @Override
     protected FilterKind getEntity() {
-        FilterKind filterKind = FilterKindLogic.getInstance().getFilterKindByUniversalSpec(this, form, true);
+        var filterKind = FilterKindLogic.getInstance().getFilterKindByUniversalSpec(this, form, true);
 
         if(filterKind != null) {
             sendEventUsingNames(filterKind.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
@@ -81,7 +78,7 @@ public class GetFilterKindCommand
     @Override
     protected BaseResult getTransfer(FilterKind filterKind) {
         var filterControl = Session.getModelController(FilterControl.class);
-        GetFilterKindResult result = FilterResultFactory.getGetFilterKindResult();
+        var result = FilterResultFactory.getGetFilterKindResult();
 
         if(filterKind != null) {
             result.setFilterKind(filterControl.getFilterKindTransfer(getUserVisit(), filterKind));
