@@ -18,65 +18,77 @@ package com.echothree.control.user.filter.server.command;
 
 import com.echothree.control.user.filter.common.form.GetFilterTypesForm;
 import com.echothree.control.user.filter.common.result.FilterResultFactory;
-import com.echothree.control.user.filter.common.result.GetFilterTypesResult;
 import com.echothree.model.control.filter.server.control.FilterControl;
+import com.echothree.model.control.filter.server.logic.FilterKindLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.filter.server.entity.FilterKind;
+import com.echothree.model.data.filter.server.entity.FilterType;
+import com.echothree.model.data.filter.server.factory.FilterTypeFactory;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.message.ExecutionErrors;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetFilterTypesCommand
-        extends BaseSimpleCommand<GetFilterTypesForm> {
+        extends BaseMultipleEntitiesCommand<FilterType, GetFilterTypesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.FilterType.name(), SecurityRoles.List.name())
-                    )))
-                )));
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.FilterType.name(), SecurityRoles.List.name())
+                ))
+        ));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("FilterKindName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetFilterTypesCommand */
     public GetFilterTypesCommand(UserVisitPK userVisitPK, GetFilterTypesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+    FilterKind filterKind;
+
     @Override
-    protected BaseResult execute() {
+    protected Collection<FilterType> getEntities() {
         var filterControl = Session.getModelController(FilterControl.class);
-        GetFilterTypesResult result = FilterResultFactory.getGetFilterTypesResult();
-        String filterKindName = form.getFilterKindName();
-        FilterKind filterKind = filterControl.getFilterKindByName(filterKindName);
-        
-        if(filterKind != null) {
+
+        filterKind = FilterKindLogic.getInstance().getFilterKindByName(this, form.getFilterKindName());
+
+        return hasExecutionErrors() ? null : filterControl.getFilterTypes(filterKind);
+    }
+
+    @Override
+    protected BaseResult getTransfers(Collection<FilterType> entities) {
+        var result = FilterResultFactory.getGetFilterTypesResult();
+
+        if(entities != null) {
+            var filterControl = Session.getModelController(FilterControl.class);
+
+            if(session.hasLimit(FilterTypeFactory.class)) {
+                result.setFilterTypeCount(filterControl.countFilterTypesByFilterKind(filterKind));
+            }
+
             result.setFilterKind(filterControl.getFilterKindTransfer(getUserVisit(), filterKind));
-            result.setFilterTypes(filterControl.getFilterTypeTransfersByFilterKind(getUserVisit(), filterKind));
-        } else {
-            addExecutionError(ExecutionErrors.UnknownFilterKindName.name(), filterKindName);
+            result.setFilterTypes(filterControl.getFilterTypeTransfers(getUserVisit(), entities));
         }
-        
+
         return result;
     }
-    
+
 }
